2006-10-19  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add event WIPE and PREWIPE

2006-09-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-8-0

2006-09-17  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: trying to learn to windows how to move files and directories
	(Closes: #0051)

2006-09-11  Pierre Chifflier  <pollux@cpe.fr>

	* feature: enhance libwzd: better error handling, inline documentation
	* bugfix: read/write group permissions in backend plaintext
	* bugfix: hide VFS entries to users/groups not listed in VFS permissions

2006-09-07  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: random characters in MLSD (Closes: #0046)
	* bugfix: provides Type in MLSD, even for VFS (Really Closes: #0042)
	* bugfix: segfault in RMDIR when using SFV module without all needed parameters
	* bugfix: PREMKDIR event always denies MKD unless $wzd::return is set
	explicitly (Perl module, Closes: #0043)

2006-09-04  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: use correct port for data connections (Closes: #0047)

2006-08-01  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: display VFS entries in MLSD listing (Closes: #0042)

2006-07-24  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add event WIPE after a file has been wiped

2006-07-21  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add event PREMKDIR when a directory will be created

2006-07-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: segfault when running site purge with online users

2006-05-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: moving ip list to a dynamic list

2006-05-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: show vfs entries in MLSD (Closes: #0042)

2006-04-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: reconnect to server when connection is interrupted (PostgreSQL backend)
	* bugfix: allow MySQL backend to auto-reconnect to 5.x server (Closes: #0037, #0041)

2006-04-05  Pierre Chifflier  <pollux@wzdftpd.net>
